[tool.poetry]
name = "hometast2-7"
version = "0.1.0"
description = ""
authors = ["Mephod1y <mephodiy@i.ua>"]
readme = "README.md"
packages = [{include = "hometast2_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
psycopg2 = "^2.9.5"
faker = "^17.6.0"
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
